--- a/Lesson_7/public/styles/style.css
+++ b/Lesson_7/public/styles/style.css
@@ -7,18 +7,20 @@
     background-color: var(--background-color);
 }
 
-#app{
-    display: flex;
-    justify-content: center;
+body{
+    width: 100%;
+    height: 100%;
 }
 
-.wraper{
-    width: 1440px;
+#app{
+    width: 100%;
+    font-family: Montserrat;
 }
 
 .header{
     display: flex;
     height: 110px;
+    width: 1440px;
     align-items: center;
     justify-content: space-between;
 }
@@ -26,9 +28,11 @@
 .logo{
     width: 75px;
     height: 27px;
+    margin-left: var(--margin-1);
 }
 
 .navigation{
+    margin-right: var(--margin-2);
 }
 
 ul{
@@ -44,3 +48,31 @@ ul{
     font-weight: 600;
 }
 
+.content{
+    margin-top: var(--margin-5);
+    margin-left: var(--margin-4);
+    margin-right: var(--margin-4);
+    margin-bottom: var(--margin-5);
+}
+
+.main-button{
+    width: 147px;
+    height: 35px;
+    border:none;
+    border: 1px solid;
+    border-radius: 40px;
+    background-color: rgba(0, 0, 0, 0.12);
+    border-color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 1);
+    padding-top: var(--padding-3);
+    padding-bottom: var(--padding-3);
+    padding-left: var(--padding-1);
+    padding-right: var(--padding-1);
+    font-family: Montserrat;
+    font-size: 10px;
+    font-weight: 700;
+}
+
+.content-title{
+    
+}
