--- a/Lesson_7/public/styles/variables.css
+++ b/Lesson_7/public/styles/variables.css
@@ -20,6 +20,8 @@
     --margin-1: 130px;
     --margin-2: 132px;
     --margin-3: 93px;
+    --margin-4: 120px;
+    --margin-5: 80px;
 
     /* font-size */
     --font-size-1: 18px;
