--- a/Lesson_7/public/styles/variables.css
+++ b/Lesson_7/public/styles/variables.css
@@ -26,7 +26,9 @@
     /* font-size */
     --font-size-1: 18px;
     --font-size-2: 18px;
+    --font-size-3: 127px;
 
-    /* font-family */
     /* images */
+    --img-width-2page:638px;
+
 }
