--- a/Lesson_7/public/styles/style.css
+++ b/Lesson_7/public/styles/style.css
@@ -4,12 +4,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: var(--background-color);
 }
 
 body{
-    width: 100%;
-    height: 100%;
+    background-color: var(--background-color);
 }
 
 #app{
@@ -105,6 +103,7 @@ ul{
     color: rgba(3, 3, 3, 1);
     font-family: Montserrat;
     padding: 18px, 25px, 18px, 25px;
+    cursor: pointer;
 }
 
 .students{
@@ -136,8 +135,11 @@ ul{
 .page2{
     margin-top: 30px;
     margin-left: 70px;
-    /* margin-bottom: var(--margin-4); */
     margin-right: 70px;
+}
+
+.page2-content{
+    display: flex;
 }
 
 .page2-title{
@@ -151,4 +153,68 @@ ul{
     line-height: 140px;
     font-family: Montserrat;
     color: rgba(255, 255, 255, 0.1);
+}
+
+
+.page2-part1-content, .page2-part2-content{
+    width: 638px;
+    height: 500px;
+    border: 1px solid;
+    border-radius: 12px;
+    padding-top: 62px;
+    border-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(0, 0, 0, 0.12);
+}
+
+.page2-part2-content{
+    margin-left: 24px;
+}
+
+.part1-title, .part2-title{
+    width: 532px;
+    height: 106px;
+    font-weight: 700;
+    line-height: 53px;
+    color: var(--text-color);
+    font-size: 48px;
+    background-color: rgba(0, 0, 0, 0.005);
+}
+
+.text{
+    padding-left: 53px;
+}
+
+.learn-more{
+    display: flex;
+    width: 143px;
+    margin-top: 25px;
+    text-decoration: none;
+    margin-bottom: 34px;
+}
+
+.text-learn-more{
+    width: 106px;
+    height: 22px;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 21.5px;
+    color: var(--text-color);
+    align-items: center;
+}
+
+.vector{
+    margin-left: 12px;
+    width: 25.5px;
+    height: 10px;
+}
+
+.section1-img{
+    width: 638px;
+    height: 251px;
+}
+
+.section2-img{
+    width: 638px;
+    height: 224px;
+    margin-top: 24px;
 }
