--- a/styles/variables.css
+++ b/styles/variables.css
@@ -46,4 +46,5 @@
     --main-bg : rgba(30, 97, 64, 1);
     --orange-bg : rgba(231, 78, 19, 1);
     --light-brown-bg : rgba(141, 50, 0, 1);
+    --grey-bg : rgb(229, 229, 229);
 }
